fix text selection using the mouse on text objects' textareas fix text object padding on Firefox make default webvideo size match video objects add a copyright notice to two files

--- a/modules/webvideo/webvideo-edit.css
+++ b/modules/webvideo/webvideo-edit.css
@@ -1,7 +1,7 @@
 .webvideo {
-	/* these are default widths and heights for new webvideo */
-	width: 320px;
-	height: 240px;
+	/* these are default widths and heights for new webvideos */
+	height: 360px;
+	width: 480px;
 }
 
 .glue-webvideo-handle {
